@@ -20,7 +20,7 @@ import os, sys, shutil
 import commands, getopt, re, string
 
 sys.path.insert(0, sys.path[0]+'/../lib')
-import config, data, po, registry, messages
+import config, data, localweb, po, registry, messages
 
 # Find sendmail in /usr/sbin or /usr/lib.
 os.environ['PATH'] = '/usr/lib:/usr/sbin:' + os.environ['PATH']
@@ -126,6 +126,8 @@ def process_pot_file(hints, file, teams):
             print line
         os.remove(file)
         os.chmod(template_path, 0664)
+    ##if not run.dry:
+    localweb.produce_page("domain", hints.domain)
     potstats = po.stats(po.read(template_path))
     if teams:
         teams = [registry.team(n) for n in teams]
@@ -133,6 +135,8 @@ def process_pot_file(hints, file, teams):
         teams = registry.team_list()
     for team in teams:
         hints.team = team
+        ##if not run.dry:
+        localweb.produce_page("team", team)
         archive_base = hints.archive_base()
         archive_path = hints.archive_path()
         maintainer_path = hints.maintainer_path()
@@ -221,6 +225,9 @@ def process_po_file(hints, file, fromnewpot = False):
         response = os.popen("calc-postats "+archive_path).readlines()
         for line in response:
             print line
+    ##if not run.dry:
+    localweb.produce_page("team", hints.team)
+    localweb.produce_page("domain", hints.domain)
     # Notify team of the PO file, whether new or updated.
     mailto = hints.team.announce_address()
     sys.stderr.write("    notifying <%s> about '%s'\n"
